# ConfigParser

./: CMakeLists.txt  README.md
include/: CommonConversions.hpp  ConfigDefinitionExample.hpp  Parser.hpp
src/: CMakeLists.txt  main.cpp
